Game thumbnail, changed title to Dead Instinct

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -220,10 +220,10 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            <img class="card-img-top" src="images/products/dead-instinct.png" alt="Dead Instinct product">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Zombie Runner</h5>
+            <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
@@ -238,10 +238,10 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="200">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            <img class="card-img-top" src="images/products/dead-instinct.png" alt="Dead Instinct product">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Zombie Runner</h5>
+            <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
@@ -256,10 +256,10 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="400">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            <img class="card-img-top" src="images/products/dead-instinct.png" alt="Dead Instinct product">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Zombie Runner</h5>
+            <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
@@ -274,10 +274,10 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="600">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            <img class="card-img-top" src="images/products/dead-instinct.png" alt="Dead Instinct product">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Zombie Runner</h5>
+            <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
            
             <div class="card-button-container d-flex justify-content-between">
