--- a/views/products.hbs
+++ b/views/products.hbs
@@ -77,7 +77,7 @@
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info">
             <div class="product-img-wrapper position-relative shadow">
-              <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner game cover image"/>
+              <img src="/images/products/dead-instinct.png" class="product-img img-fluid" alt="Dead Instinct game cover image"/>
             </div>
           </button>
           <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
@@ -102,11 +102,11 @@
       <div class="py-4">
         <div id="zombie-game-info" class="product-info">
           <div class="container">
-            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Zombie Runner</h3>
+            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Dead Instinct</h3>
             <div class="row">
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
-                  <img src="https://img.youtube.com/vi/DS15qFLy9RQ/mqdefault.jpg" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <img src="https://img.youtube.com/vi/DS15qFLy9RQ/mqdefault.jpg" class="img-fluid" alt="Dead Instinct YouTube Thumbnail"/>
                   <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
                     <i class="fas fa-play"></i>
                   </button>
@@ -115,7 +115,7 @@
               <div class="col-lg-8">
                 <div class="product-description mt-4 mt-lg-0">
                   <p>
-                    Zombie Runner is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
+                    Dead Instinct is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
