Added real profiles for Nick, Harrison and Jeff

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -29,4 +29,9 @@
   body { /* animate  on scroll mobile overflow fix */
     overflow-x: hidden;
   }
+
+  .our-people .profile-image{
+    width: 180px;
+    height: 100%;
+  }
 }
