--- a/views/products.hbs
+++ b/views/products.hbs
@@ -115,7 +115,7 @@
               <div class="col-lg-8">
                 <div class="product-description mt-4 mt-lg-0">
                   <p>
-                    Dead Instinct is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
+                    Dead Instinct is an action-packed zombie endless runner game! Keep running away from the zombies before they catch you! plz get game thx.
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
