--- a/views/about.hbs
+++ b/views/about.hbs
@@ -37,16 +37,16 @@
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/harrison_verrios.jpg" class="profile-image img-fluid" alt="Harrison Verrios's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/harrison-verrios/" target="_blank" title="Click to view Harrison's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+        <h4 class="capitalize">Harrison Verrios</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Harrison has been developing games for over eight years and has been involved in the publication of seven iOS and Android applications. He is now finishing off his bachelor's degree, majoring in astrophysics, mathematics and game development. His passion for game programming has led him to develop projects with multiple teams, with the current focus on coding Dreamlink's new app, Dead Instinct, using the Unity game engine. Additionally, he is currently involved in a robotics student team at Monash University; the Monash Nova Rover team, building Mars rover analogues for an international competition run by NASA.
         </p>
       </div>
     </div>
@@ -54,16 +54,16 @@
     <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/jeffrey_goh.jpg" class="profile-image img-fluid" alt="Jeffrey Goh's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" target="_blank" title="Click to view Jeffrey's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+        <h4 class="capitalize">Jeffrey Goh</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          When he's not building or testing out rhythm game controller pads, Jeffrey loves to find the humor in this weird world that we live in. He strives to provide a different point of view to make others think about how things could be done better and more efficient. Watch out though, he's always armed with a wild set of ideas to load a cannon with, mostly to try and hit the broad side of a barn. Other than indulging reality, Jeffrey specializes in design work, UI and UX implementation, coding, and moderation. He is the one you can trust if you need something done off the cuff.
         </p>
       </div>
     </div>
@@ -72,16 +72,16 @@
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Nicholas Parsons's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" target="_blank" title="Click to view Nick's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+        <h4 class="capitalize">Nicholas Parsons</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Nick has recently just finished his Bachelor of Computer Science where he specialised in Advanced Computer Science. During his time at University, Nick developed a strong passion for web-based technologies. Nick has put his passion and skills to use by taking on the role of lead web-developer, where he built and helped design Dreamlink’s website. While at Dreamlink, Nick has also worked with the UI/UX team to help create user-interfaces for our applications. When he is not coding, Nick enjoys to watch Netflix, or, if it’s winter, Nick enjoys to head up to the snow for a ski. 
         </p>
       </div>
     </div>
