Updated youtube thumbnail to be graphics thumbnail

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -27,7 +27,7 @@
   <div class="container-fluid">
     <div class="category-row row justify-content-center">
       <div class="cat-btn-container col-md text-center">
-        <button class="cat-btn" data-scroll="true" data-to=".games-cat" data-toggle="tooltip" data-placement="top" title="See our games">
+        <button class="cat-btn" data-scroll="true" data-to=".games-cat" data-toggle="tooltip" data-placement="top" title="View our games">
           <div class="circle-icon">
             <i class="icon fas fa-gamepad fa-fw"></i>
           </div>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="cat-btn-container col-md text-center">
-        <button class="cat-btn" data-scroll="true" data-to=".applications-cat" data-toggle="tooltip" data-placement="top" title="See our applications">
+        <button class="cat-btn" data-scroll="true" data-to=".applications-cat" data-toggle="tooltip" data-placement="top" title="View our applications">
           <div class="circle-icon">
             <i class="icon fas fa-file-code fa-fw"></i>
           </div>
@@ -44,7 +44,7 @@
         </button>
       </div>
 
-      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".software-cat" data-toggle="tooltip" data-placement="top" title="See our software">
+      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".software-cat" data-toggle="tooltip" data-placement="top" title="View our software">
         <button class="cat-btn">
           <div class="circle-icon">
             <i class="icon fas fa-laptop fa-fw"></i>
@@ -53,7 +53,7 @@
         </button>
       </div>
 
-      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".extensions-cat" data-toggle="tooltip" data-placement="top" title="See our extensions">
+      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".extensions-cat" data-toggle="tooltip" data-placement="top" title="View our extensions">
         <button class="cat-btn">
           <div class="circle-icon">
             <i class="icon fas fa-cog fa-fw"></i>
@@ -75,9 +75,9 @@
       <div class="row text-center">
         <div class="offset-md-4"></div>
         <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#zombie-game-info">
+          <button class="btn-hidden" data-expand="#zombie-game-info" title="Click to view info about Dead Instinct">
             <div class="product-img-wrapper position-relative shadow">
-              <img src="/images/products/dead-instinct.png" class="product-img img-fluid" alt="Dead Instinct game cover image"/>
+              <img src="/images/products/dead-instinct/dead-instinct.png" class="product-img img-fluid" alt="Dead Instinct game cover image"/>
             </div>
           </button>
           <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
@@ -106,7 +106,7 @@
             <div class="row">
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
-                  <img src="https://img.youtube.com/vi/DS15qFLy9RQ/mqdefault.jpg" class="img-fluid" alt="Dead Instinct YouTube Thumbnail"/>
+                  <img src="images/products/dead-instinct/dead-instinct-yt.png" class="img-fluid" alt="Dead Instinct YouTube Thumbnail"/>
                   <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
                     <i class="fas fa-play"></i>
                   </button>
