Added team cards and new images

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,7 +153,7 @@ footer.footer .nav-links a {
 }
 
 .circle-icon {
-  color: #D4351C !important;
+  color: white;/* #D4351C !important;*/
   font-size: 25px;
 }
 
