--- a/views/about.hbs
+++ b/views/about.hbs
@@ -62,8 +62,11 @@
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
         <h4 class="capitalize">Jeffrey Goh</h4>
-        <p>
-          When he's not building or testing out rhythm game controller pads, Jeffrey loves to find the humor in this weird world that we live in. He strives to provide a different point of view to make others think about how things could be done better and more efficient. Watch out though, he's always armed with a wild set of ideas to load a cannon with, mostly to try and hit the broad side of a barn. Other than indulging reality, Jeffrey specializes in design work, UI and UX implementation, coding, and moderation. He is the one you can trust if you need something done off the cuff.
+        <p class="mb-0">
+          When he's not building or testing out rhythm game controller pads, Jeffrey loves to find the humor in this weird world that we live in. He strives to provide a different point of view to make others think about how things could be done better and more efficient. Watch out though, he's always armed with a wild set of ideas to load a cannon with, mostly to try and hit the broad side of a barn. Other than indulging reality, Jeffrey specializes in design work, UI and UX implementation, coding, and moderation. 
+        </p>
+        <p class="mt-0">
+          He is the one you can trust if you need something done off the cuff.
         </p>
       </div>
     </div>
