--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -18,9 +18,9 @@
       <div class="col-lg-6">
         <h1 class="display-5 text-center font-weight-light text-capitalize">Contact Us</h1>
         <p>
-          We love to hear from our customers and the comminity. 
+          We love to hear from our customers and the community. 
           We believe that feedback drives creativity and quality. 
-          Feel free to get in contact us below, or reach out to use through one of our social medias. 
+          Feel free to get in contact with us below, or reach out to us through one of our social media platforms. 
         </p>
       </div>
     </div>
