--- a/public/css/index.css
+++ b/public/css/index.css
@@ -105,11 +105,11 @@
 /*--- What we do ---*/
 
 #quality-box {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.6), #d4351c82 ), url('../images/value-bg/coding.webp');
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(189, 99, 99, 0.51) ), url('../images/value-bg/quality.jpg');
 }
 
 #creative-box {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.6), #2180f482 ), url('../images/value-bg/creative-brain.jpg');
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), #2180f482 ), url('../images/value-bg/creative.jpg');
 }
 
 #innovation-box {
