--- a/views/index.hbs
+++ b/views/index.hbs
@@ -96,42 +96,42 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
+            <img src="images/team/index-profiles/harrison_verrios.jpg" class="circle-img" alt="Harrison Verrios" />
+            <h4>Harrison Verrios</h4>
             <p>Developer</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Harrison</h1>
+            <p>App Developer</p>
+            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
+            <img src="images/team/index-profiles/jeffrey_goh.jpg" class="circle-img" alt="Jeffrey Goh" />
+            <h4>Jeffrey Goh</h4>
             <p>Developer</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Jeffrey</h1>
+            <p>App Developer & UI/UX</p>
+            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="Nicholas Parsons" />
+            <h4>Nicholas Parsons</h4>
             <p>Developer</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Nick</h1>
+            <p>Web Developer & UI/UX</p>
+            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
