--- a/views/about.hbs
+++ b/views/about.hbs
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-5 order-lg-2 text-lg-right text-center align-self-center">
-        <img src="images/logo.png" class="logo rounded img-fluid" alt="Logo">
+        <img src="images/logo.png" class="logo rounded img-fluid" alt="Logo" loading="lazy">
       </div>
       <div class="col-lg-7 order-lg-1">
         <div class="about-text-container">
@@ -37,7 +37,7 @@
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/harrison_verrios.jpg" class="profile-image img-fluid" alt="Harrison Verrios's Profile Image" />
+          <img src="images/team/about-profiles/harrison_verrios.jpg" class="profile-image img-fluid" alt="Harrison Verrios's Profile Image" loading="lazy" />
           <figcaption class="socials">
             <a href="https://www.linkedin.com/in/harrison-verrios/" target="_blank" title="Click to view Harrison's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
@@ -54,7 +54,7 @@
     <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/jeffrey_goh.jpg" class="profile-image img-fluid" alt="Jeffrey Goh's Profile Image" />
+          <img src="images/team/about-profiles/jeffrey_goh.jpg" class="profile-image img-fluid" alt="Jeffrey Goh's Profile Image" loading="lazy"/>
           <figcaption class="socials">
             <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" target="_blank" title="Click to view Jeffrey's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
@@ -75,7 +75,7 @@
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Nicholas Parsons's Profile Image" />
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Nicholas Parsons's Profile Image" loading="lazy" />
           <figcaption class="socials">
             <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" target="_blank" title="Click to view Nick's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
