--- a/views/index.hbs
+++ b/views/index.hbs
@@ -96,7 +96,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/harrison_verrios.jpg" class="circle-img" alt="Harrison Verrios" />
+            <img src="images/team/index-profiles/harrison_verrios.jpg" class="circle-img" alt="Harrison Verrios" loading="lazy" />
             <h4>Harrison Verrios</h4>
             <p>Developer</p>
           </div>
@@ -110,7 +110,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/jeffrey_goh.jpg" class="circle-img" alt="Jeffrey Goh" />
+            <img src="images/team/index-profiles/jeffrey_goh.jpg" class="circle-img" alt="Jeffrey Goh" loading="lazy" />
             <h4>Jeffrey Goh</h4>
             <p>Developer</p>
           </div>
@@ -124,7 +124,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="Nicholas Parsons" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="Nicholas Parsons" loading="lazy" />
             <h4>Nicholas Parsons</h4>
             <p>Developer</p>
           </div>
@@ -138,7 +138,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="700" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -154,7 +154,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="900" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -168,7 +168,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -182,7 +182,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -196,7 +196,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -220,7 +220,7 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product">
+            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
@@ -238,7 +238,7 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="200">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product">
+            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
@@ -256,7 +256,7 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="400">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product">
+            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
@@ -274,7 +274,7 @@
       <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="600">
         <div class="product-info card shadow">
           <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product">
+            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
@@ -301,7 +301,7 @@
       <div class="form-row">
         <div class="form-group col-sm-6 py-0">
           <label class="sr-only" for="input-first-name">First name</label>
-          <div class="input-group">
+          <div class="firstname-container">
             <input class="form-control" name="firstName" id="input-first-name" type="text" placeholder="First Name" required />
             <div class="invalid-feedback">
               Please enter your first name.
@@ -310,7 +310,7 @@
         </div>
         <div class="form-group col-sm-6 py-0">
           <label class="sr-only" for="input-last-name">Last name</label>
-          <div class="input-group">
+          <div class="last-name-contains">
             <input class="form-control" name="lastName" id="input-last-name" type="text" placeholder="Last Name" required />
             <div class="invalid-feedback">
               Please enter your last name.
@@ -321,7 +321,7 @@
       
       <div class="form-group">
         <label class="sr-only" for="input-email">Email address</label>
-        <div class="input-group">
+        <div class="email-container">
           <input type="email" name="email" class="form-control" id="input-email" placeholder="Enter email" required />
           <div class="invalid-feedback">
             Please enter a valid email address.
@@ -331,7 +331,7 @@
 
       <div class="form-group">
         <label class="sr-only" for="email-body">Email body message</label>
-        <div class="input-group">
+        <div class="email-body-container">
           <textarea class="form-control no-resize" name="emailBody" data-gramm_editor="false" id="email-body" placeholder="Message" rows="4" required></textarea>
           <div class="invalid-feedback">
             Please enter a message to send.
