--- a/views/products.hbs
+++ b/views/products.hbs
@@ -73,14 +73,13 @@
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
       <div class="row text-center">
-        <div class="offset-md-4"></div>
-        <div class="col-md-4">
+        <div class="offset-md-4 col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info" title="Click to view info about Dead Instinct">
             <div class="product-img-wrapper position-relative shadow">
-              <img src="/images/products/dead-instinct/dead-instinct.png" class="product-img img-fluid" alt="Dead Instinct game cover image"/>
+              <img src="/images/products/dead-instinct/dead-instinct.png" class="product-img img-fluid" alt="Dead Instinct game cover image" />
             </div>
           </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+          <div class="store-buttons align-items-right mt-3">
             <a class="mr-3" href="#" target="_blank" title="Go to App Store">
               <i class="apple-store store-icon fab fa-apple fa-fw"></i>
             </a>
