--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Prefer edge over IE -->
+  
+  <!-- SEO -->
+  <meta name="author" content="Dreamlink">
+  <meta name="title" content="Welcome to Dreamlink Studio, an application and software development team">
+  <meta name="description" content="Dreamlink Studio create various applications for the web, mobiles and more. They focus on both software as a service applications as well as game based applications">
+  <meta name="keyword" content="games applications mobile apps web apps dreamlink dreamers iphone android endless runner software SaS software as a service dead instinct emoji party zombie runner">
+
+  <!-- Favicon -->  
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#d4351c">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-config" content="/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+
   {{# if title }}
     <title>Dreamlink Studio - {{title}}</title>
   {{else}}
@@ -50,7 +70,7 @@
       <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="images/logo.png" id="logo" alt="Dreamlink Studio Logo" />
+            <img src="images/logo-sm.png" id="logo" alt="Dreamlink Studio Logo" />
           </a>
           <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
             <i class="text-dark fas fa-bars"></i>
