--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,7 +103,7 @@
           <div class="flip-card-back">
             <h1>Harrison</h1>
             <p>App Developer</p>
-            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
+            <a href="/about#harrison-verrios" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
@@ -117,35 +117,35 @@
           <div class="flip-card-back">
             <h1>Jeffrey</h1>
             <p>App Developer & UI/UX</p>
-            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
+            <a href="/about#jeffrey-goh" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="Nicholas Parsons" loading="lazy" />
+            <img src="images/team/index-profiles/nicholas_parsons.jpg" class="circle-img" alt="Nicholas Parsons" loading="lazy" />
             <h4>Nicholas Parsons</h4>
             <p>Developer</p>
           </div>
           <div class="flip-card-back">
             <h1>Nick</h1>
             <p>Web Developer & UI/UX</p>
-            <a href="/about" class="btn btn-md btn-outline-light">Learn More</a>
+            <a href="/about#nicholas-parsons" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="700" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+            <img src="images/team/index-profiles/wilbert_soetanto.jpg" class="circle-img" alt="Wilbert Soetanto" loading="lazy" />
+            <h4>Wilbert Soetanto</h4>
+            <p>Lead Developer</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Wilbert</h1>
+            <p>App Developer</p>
+            <a href="/about#wilbert-soetanto" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
