--- a/views/index.hbs
+++ b/views/index.hbs
@@ -93,7 +93,7 @@
     <!-- Our team carousel -->
     <div class="owl-profile-carousel owl-carousel owl-theme">
       <!-- Slide one (4 cards)  -->
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="100" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/harrison_verrios.jpg" class="circle-img" alt="Harrison Verrios" loading="lazy" />
@@ -107,7 +107,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="300" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/jeffrey_goh.jpg" class="circle-img" alt="Jeffrey Goh" loading="lazy" />
@@ -121,7 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/nicholas_parsons.jpg" class="circle-img" alt="Nicholas Parsons" loading="lazy" />
@@ -135,7 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="700" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="700" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/wilbert_soetanto.jpg" class="circle-img" alt="Wilbert Soetanto" loading="lazy" />
@@ -151,7 +151,7 @@
       </div>
 
       <!-- Slide two (4 cards)  -->
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="900" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="900" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
@@ -165,7 +165,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1100" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1300" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
@@ -193,7 +193,7 @@
           </div>
         </div>
       </div>
-      <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1500" data-aos-easing="ease-out-back">
+      <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
@@ -217,7 +217,7 @@
   <!-- Our Products -->
   <div class="container">
     <div class="owl-products-carousel owl-carousel owl-theme">
-      <div class="item" data-aos="flip-left-foo" data-aos-duration="800">
+      <div class="item">
         <div class="product-info card shadow">
           <div class="img-wrapper">
             <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
@@ -226,7 +226,7 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
                 <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
                 <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-      <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="200">
+      <div class="item">
         <div class="product-info card shadow">
           <div class="img-wrapper">
             <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
@@ -244,7 +244,7 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
                 <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
                 <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
@@ -253,7 +253,7 @@
           </div>
         </div>
       </div>
-      <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="400">
+      <div class="item">
         <div class="product-info card shadow">
           <div class="img-wrapper">
             <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
@@ -262,7 +262,7 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
                 <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
                 <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
@@ -271,7 +271,7 @@
           </div>
         </div>
       </div>
-      <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="600">
+      <div class="item">
         <div class="product-info card shadow">
           <div class="img-wrapper">
             <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
@@ -281,7 +281,7 @@
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
            
             <div class="card-button-container d-flex justify-content-between">
-              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
                 <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
                 <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
