--- a/views/products.hbs
+++ b/views/products.hbs
@@ -72,7 +72,7 @@
     </div>
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
-      <div class="row text-center">
+      <div class="row text-center" id="game-row-one">
         <div class="offset-md-4 col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info" title="Click to view info about Dead Instinct">
             <div class="product-img-wrapper position-relative shadow">
